[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Fish/Fish.gd" type="Script" id=1]
[ext_resource path="res://Sounds/splash.wav" type="AudioStream" id=2]

[sub_resource type="SphereShape" id=1]
radius = 0.5

[sub_resource type="CapsuleMesh" id=3]
radius = 0.2
mid_height = 0.4

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0 )

[sub_resource type="PrismMesh" id=4]
size = Vector3( 0.1, 0.2, 0.2 )

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0 )

[sub_resource type="SphereShape" id=2]
radius = 6.0

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id=6]
material = SubResource( 5 )
size = Vector2( 0.1, 0.1 )

[node name="Fish" type="RigidBody" groups=["Fish"]]
linear_damp = 2.0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Meshs" type="Spatial" parent="."]

[node name="Body" type="MeshInstance" parent="Meshs"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")
material/0 = SubResource( 7 )

[node name="Tail" type="MeshInstance" parent="Meshs"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0.382366 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 8 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="SwimTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="SplashParticles" type="CPUParticles" parent="."]
emitting = false
lifetime = 0.25
explosiveness = 1.0
mesh = SubResource( 6 )
direction = Vector3( 0, 1, 0 )
initial_velocity = 3.0

[node name="SplashPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -24.0

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="SwimTimer" to="." method="_on_SwimTimer_timeout"]
